[package]
name = "sshfs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
crossbeam-channel = "0.5.16"
ctrlc = "3.5.2"
env_logger = "0.11.11"
fast_rsync = "0.2.0"
fuser = "0.11"
hex = "0.4.3"
libc = "0.2.186"
log = "0.4.33"
lru = "0.18.1"
once_cell = "1.21.4"
sha2 = "0.11.0"
ssh2 = "0.9.6"
